@@ -1,3 +1,9 @@
+
+- bug in spindle speed override: The override value wasn't applied
+  when spindle turning in reverse direction
+
+  Thanks Reinhard for reporting
+
 ver 3.1.3.8 (LinuxCNC 2.8.3 release)
 - fixed translation of some tooltips and a dialog message
   Thanks to zz912
